Updated MonitorThread and Util
Updated MonitorThread and Util with group's code.