@@ -4,47 +4,36 @@ import java.security.SecureRandom;
 import java.util.ArrayList;
 import javax.swing.JOptionPane;
 
-public class Util
-{
-    private String sHash;
-    private MerkleNode oLeft;
-    private MerkleNode oRight;
-
-    public String getMerkleRoot(ArrayList<String> wordList)
-    {
+public class Util {
+    public String getMerkleRoot(ArrayList<String> wordList) {
         MerkleNode finalNode = new MerkleNode();
         ArrayList<MerkleNode> mNodeList = new ArrayList<>();
 
-        for(int i = 0; i < wordList.size(); i++)
-        {
+        for(int i = 0; i < wordList.size(); i++) {
             mNodeList.add(new MerkleNode());
             mNodeList.get(i).sHash = generateHash(wordList.get(i));
         }
 
-        for(int i = 0; i < wordList.size(); i += 2)
-        {
+        for(int i = 0; i < wordList.size(); i += 2) {
             MerkleNode mNode = new MerkleNode();
 
             populateMerkleNode(mNode, mNodeList.get(i), mNodeList.get(i + 1));
             mNodeList.add(mNode);
         }
 
-        populateMerkleNode(finalNode, mNodeList.get(mNodeList.size() - 2), mNodeList.get(mNodeList.size() - 1));
+        populateMerkleNode(finalNode, mNodeList.get(mNodeList.size() - 2), mNodeList.getLast());
 
         return finalNode.sHash;
     }
 
-    private void populateMerkleNode(MerkleNode oNode, MerkleNode oLeftNode, MerkleNode oRightNode)
-    {
+    private void populateMerkleNode(MerkleNode oNode, MerkleNode oLeftNode, MerkleNode oRightNode) {
         oNode.oLeft = oLeftNode;
         oNode.oRight = oRightNode;
         oNode.sHash = generateHash(oNode.oLeft.sHash + oNode.oRight.sHash);
     }
 
-    public synchronized String generateHash(String sOriginal)
-    {
-        try
-        {
+    public synchronized String generateHash(String sOriginal) {
+        try {
             MessageDigest digest = MessageDigest.getInstance("SHA-256");
             byte[] btEncodedhash = digest.digest(sOriginal.getBytes(StandardCharsets.UTF_8));
             StringBuilder sb = new StringBuilder();
@@ -54,41 +43,31 @@ public class Util
             }
             return sb.toString();
         }
-        catch (Exception ex)
-        {
+        catch (Exception ex) {
             System.out.println("Error generating hash: " + ex.getMessage());
             return null;
         }
     }
 
-    public String promptUser(String uQuestion)
-    {
+    public String promptUser(String uQuestion) {
         String sAnswer;
-        JOptionPane oQuestion = new JOptionPane();
-
-        sAnswer = oQuestion.showInputDialog(uQuestion);
-
+        sAnswer = JOptionPane.showInputDialog(uQuestion);
         return sAnswer;
     }
 
-    public void sleepRandomTime(String sThreadName)
-    {
+    public void sleepRandomTime(String sThreadName) {
         // Gets random number between 0 and 5 and then adds 3, meaning between and 8 now.
         int iSleepTime = new SecureRandom().nextInt(5) + 3;
-
         System.out.println(sThreadName + " sleeping for " + iSleepTime + " seconds.");
-        sleep(iSleepTime);
+        try {
+            sleep(iSleepTime);
+        }
+        catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 
-    public void sleep(int sleepTime)
-    {
-        try
-        {
-            Thread.sleep(sleepTime * 1000);
-        }
-        catch(Exception ex)
-        {
-
-        }
+    public void sleep(int sleepTime) throws Exception {
+        Thread.sleep(sleepTime * 1000L);
     }
 }
